--- a/pulsevote-backend/package.json
+++ b/pulsevote-backend/package.json
@@ -1,12 +1,13 @@
 {
   "name": "ice-task-3",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-  "start": "node server.js",
-  "dev": "nodemon server.js",
-  "test": "echo \"Error: no test specified\" && exit 1"
-},
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
